--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -14,17 +14,24 @@ ARG NEXTAUTH_SECRET
 ARG EMAIL_SERVER_URL
 ARG DATABASE_URL
 
+
+FROM node:${NODE_VERSION} AS base
+WORKDIR /app
+
+ARG PNPM_VERSION=7.5.1
+RUN npm install --location=global pnpm@${PNPM_VERSION}
+RUN pnpm config set store-dir ./.pnpm-store
+
 # Install dependencies only when needed
-FROM node:${NODE_VERSION} AS deps
+FROM base AS deps
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
 # RUN apk add --no-cache libc6-compat
 
-WORKDIR /app
-COPY package.json yarn.lock ./
-RUN yarn install --frozen-lockfile --ignore-optional --ignore-scripts
+COPY pnpm-lock.yaml ./
+RUN pnpm fetch
 
 # Rebuild the source code only when needed
-FROM node:${NODE_VERSION} AS builder
+FROM base AS builder
 
 ENV NEXT_TELEMETRY_DISABLED 1
 ENV NEXT_PUBLIC_GOOGLE_TAG_MANAGER_CONTAINER_ID=$GOOGLE_TAG_MANAGER_CONTAINER_ID
@@ -38,16 +45,24 @@ ARG PATREON_CAMPAIGN_ID
 ARG GOOGLE_TAG_MANAGER_CONTAINER_ID
 ARG DATABASE_URL
 
-WORKDIR /app
 COPY . .
-COPY --from=deps /app/node_modules ./node_modules
-RUN yarn prisma generate
-RUN yarn prisma migrate deploy
-RUN yarn build
+COPY --from=deps /app/.pnpm-store ./.pnpm-store
+RUN pnpm install --offline
+RUN pnpm prisma generate
+RUN pnpm prisma migrate deploy
+RUN pnpm build
+
+FROM base as prod_deps
+COPY --from=deps /app/.pnpm-store ./.pnpm-store
+COPY pnpm-lock.yaml ./pnpm-lock.yaml
+COPY package.json ./package.json
+COPY prisma/schema.prisma ./prisma/schema.prisma
+
+RUN pnpm install --offline -P
+RUN pnpm dlx prisma generate
 
 # Production image, copy all the files and run next
-FROM node:${NODE_VERSION} AS runner
-WORKDIR /app
+FROM base AS runner
 
 ENV NODE_ENV production
 ENV NEXT_TELEMETRY_DISABLED 1
@@ -72,11 +87,15 @@ ARG DATABASE_URL
 COPY --from=builder /app/next.config.js ./
 COPY --from=builder /app/public ./public
 COPY --from=builder /app/package.json ./package.json
+COPY --from=builder /app/.next ./.next
+RUN chown -R nextjs:nodejs ./.next
+
+COPY --from=prod_deps /app/node_modules ./node_modules
 
 # Automatically leverage output traces to reduce image size
 # https://nextjs.org/docs/advanced-features/output-file-tracing
-COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+# COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+# COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
 USER nextjs
 
@@ -84,4 +103,4 @@ ENV PORT=${PORT}
 EXPOSE ${PORT}
 
 ENTRYPOINT ["tini", "--"]
-CMD ["node", "server.js"]
+CMD ["pnpm", "start"]
