Add CI env var to build phase

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -22,6 +22,7 @@ FROM base AS builder
 
 ENV NEXT_TELEMETRY_DISABLED 1
 ENV NEXT_PUBLIC_GOOGLE_TAG_MANAGER_CONTAINER_ID=$GOOGLE_TAG_MANAGER_CONTAINER_ID
+ENV CI 1
 
 ARG CF_SPACE_ID
 ARG CF_DELIVERY_ACCESS_TOKEN
