--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,11 +1,10 @@
 ARG NODE_VERSION=16.15-alpine
 
-ARG PORT=80
-
 FROM node:${NODE_VERSION} AS base
 WORKDIR /app
-
+ENV NEXT_TELEMETRY_DISABLED=1
 ARG PNPM_VERSION=7.5.1
+
 RUN npm install --location=global pnpm@${PNPM_VERSION}
 RUN pnpm config set store-dir ./.pnpm-store
 
@@ -19,10 +18,17 @@ RUN pnpm fetch
 
 # Rebuild the source code only when needed
 FROM base AS builder
+ENV CI=1
 
-ENV NEXT_TELEMETRY_DISABLED 1
-ENV NEXT_PUBLIC_GOOGLE_TAG_MANAGER_CONTAINER_ID=$GOOGLE_TAG_MANAGER_CONTAINER_ID
-ENV CI 1
+COPY package.json pnpm-lock.yaml ./
+COPY --from=deps /app/.pnpm-store ./.pnpm-store
+RUN pnpm install --offline --no-optional
+
+COPY . .
+
+ARG DATABASE_URL
+RUN pnpm prisma generate
+RUN pnpm prisma migrate deploy
 
 ARG CF_SPACE_ID
 ARG CF_DELIVERY_ACCESS_TOKEN
@@ -31,29 +37,21 @@ ARG CF_ENVIRONMENT
 ARG PATREON_ACCESS_TOKEN
 ARG PATREON_CAMPAIGN_ID
 ARG GOOGLE_TAG_MANAGER_CONTAINER_ID
-ARG DATABASE_URL
-
-COPY package.json pnpm-lock.yaml ./
-COPY --from=deps /app/.pnpm-store ./.pnpm-store
-RUN pnpm install --offline --no-optional
-
-COPY . .
-
-RUN pnpm prisma generate
-RUN pnpm prisma migrate deploy
+ENV NEXT_PUBLIC_GOOGLE_TAG_MANAGER_CONTAINER_ID=${GOOGLE_TAG_MANAGER_CONTAINER_ID}
 RUN pnpm build
 
 # Production image, copy all the files and run next
 FROM base AS runner
-
-ENV NODE_ENV production
-ENV NEXT_TELEMETRY_DISABLED 1
-ENV NEXT_PUBLIC_GOOGLE_TAG_MANAGER_CONTAINER_ID=$GOOGLE_TAG_MANAGER_CONTAINER_ID
-
 RUN apk add --no-cache tini
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
+
+ARG PORT=80
+ENV NODE_ENV=production
+
+ENV PORT=${PORT}
+EXPOSE ${PORT}
 
 COPY --from=builder /app/next.config.js ./
 COPY --from=builder /app/public ./public
@@ -65,9 +63,6 @@ COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
 USER nextjs
-
-ENV PORT=${PORT}
-EXPOSE ${PORT}
 
 ENTRYPOINT ["tini", "--"]
 CMD ["node", "server.js"]
