--- a/.dockerignore
+++ b/.dockerignore
@@ -8,5 +8,9 @@ docker
 *Dockerfile*
 *docker-compose*
 node_modules
-npm-debug.log
+*-debug.log
+*-error.log
 README.md
+LICENSE
+getContentfulEnvironment.js
+
