--- a/package.json
+++ b/package.json
@@ -81,7 +81,9 @@
     "autoprefixer": "^10.4.7",
     "babel-jest": "^28.1.1",
     "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "12.2.2",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.1",
