--- a/package.json
+++ b/package.json
@@ -22,77 +22,77 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mailchimp/mailchimp_marketing": "^3.0.75",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "4.0.0",
-    "@react-spring/web": "^9.4.5",
+    "@react-spring/web": "^9.5.0",
     "@tailwindcss/line-clamp": "^0.4.0",
     "classnames": "^2.3.1",
     "contentful": "^9.1.32",
     "crypto-js": "^4.1.1",
     "form-data": "^4.0.0",
     "fuse.js": "^6.6.2",
-    "http-status-codes": "^2.1.4",
-    "ky": "^0.30.0",
+    "http-status-codes": "^2.2.0",
+    "ky": "^0.31.0",
     "ky-universal": "^0.10.1",
-    "mailgun.js": "^7.0.2",
+    "mailgun.js": "^7.0.4",
     "next": "12.2.2",
     "next-auth": "^4.10.0",
     "next-pwa": "^5.5.4",
     "next-seo": "^5.4.0",
-    "nodemailer": "^6.7.5",
+    "nodemailer": "^6.7.7",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-gtm-module": "^2.0.11",
     "react-highlight-words": "^0.18.0",
-    "react-hook-form": "^7.32.2",
+    "react-hook-form": "^7.33.1",
     "react-modal": "^3.15.1",
     "react-qr-code": "^2.0.7",
-    "react-select": "^5.3.2",
+    "react-select": "^5.4.0",
     "react-syntax-highlighter": "^15.5.0",
-    "react-toastify": "^9.0.4",
+    "react-toastify": "^9.0.6",
     "react-use-pagination": "^2.0.1",
     "react-waypoint": "^10.3.0",
-    "sass": "^1.52.3",
-    "sharp": "^0.30.6",
+    "sass": "^1.53.0",
+    "sharp": "^0.30.7",
     "tailwindcss": "^3.1.6",
-    "zustand": "^4.0.0-rc.1"
+    "zustand": "4.0.0-rc.2"
   },
   "devDependencies": {
     "@axe-core/react": "^4.4.3",
     "@contentful/rich-text-types": "^15.12.1",
-    "@faker-js/faker": "^7.2.0",
-    "@testing-library/dom": "^8.13.0",
+    "@faker-js/faker": "^7.3.0",
+    "@testing-library/dom": "^8.16.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@types/crypto-js": "^4.1.1",
     "@types/mailchimp__mailchimp_marketing": "^3.0.5",
-    "@types/node": "^18.0.5",
-    "@types/react": "18.0.14",
+    "@types/node": "^18.0.6",
+    "@types/react": "18.0.15",
     "@types/react-gtm-module": "^2.0.1",
-    "@types/react-highlight-words": "^0.16.3",
+    "@types/react-highlight-words": "^0.16.4",
     "@types/react-modal": "^3.13.1",
-    "@types/react-syntax-highlighter": "^15.5.2",
-    "@typescript-eslint/eslint-plugin": "^5.28.0",
-    "@typescript-eslint/parser": "^5.28.0",
+    "@types/react-syntax-highlighter": "^15.5.3",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "autoprefixer": "^10.4.7",
-    "babel-jest": "^28.1.1",
-    "eslint": "8.18.0",
+    "babel-jest": "^28.1.3",
+    "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^28.1.1",
-    "jest-environment-jsdom": "^28.1.2",
-    "lint-staged": "^13.0.2",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
+    "lint-staged": "^13.0.3",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prisma": "^4.0.0",
-    "ts-node": "^10.8.1",
+    "ts-node": "^10.9.1",
     "typescript": "4.7.4"
   },
   "jest": {
@@ -121,8 +121,8 @@
     }
   },
   "optionalDependencies": {
-    "contentful-management": "^10.6.3",
-    "contentful-typescript-codegen": "^3.2.2"
+    "contentful-management": "^10.8.0",
+    "contentful-typescript-codegen": "^3.2.3"
   },
   "engines": {
     "pnpm": ">=7.0.0"
