--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
-ARG NODE_VERSION=16.15-alpine
+ARG NODE_VERSION=16.16.0
 
-FROM node:${NODE_VERSION} AS base
+FROM node:${NODE_VERSION}-alpine AS base
 WORKDIR /app
 ENV NEXT_TELEMETRY_DISABLED=1
 ARG PNPM_VERSION=7.5.1
