Simplify local database development

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,10 @@ EMAIL_SERVER_HOST=
 EMAIL_SERVER_PORT=
 EMAIL_FROM=
 
-DATABASE_URL="postgresql://vegan_hacktivists:localpass@localhost:5432/vegan_hacktivists?schema=public"
+DATABASE_NAME="vegan_hacktivists"
+DATABASE_USER="vegan_hacktivists"
+DATABASE_PASSWORD="supersecretpassword"
+DATABASE_URL="postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@localhost:5432/${DATABASE_NAME}?schema=public"
 
 NEXT_TELEMETRY_DISABLED=1
 NEXTAUTH_SECRET=govegan
