--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,25 +1,48 @@
-version: "3"
+version: "3.8"
 services:
   veganhacktivists:
     depends_on:
       - db
     build:
+      network: host
       context: .
+      dockerfile: docker/Dockerfile
       args:
-        - CF_SPACE_ID=$CF_SPACE_ID
-        - CF_DELIVERY_ACCESS_TOKEN=$CF_DELIVERY_ACCESS_TOKEN
-        - CF_PREVIEW_ACCESS_TOKEN=$CF_PREVIEW_ACCESS_TOKEN
-        - CF_ENVIRONMENT=$CF_ENVIRONMENT
+        CF_DELIVERY_ACCESS_TOKEN: ${CF_DELIVERY_ACCESS_TOKEN}
+        CF_ENVIRONMENT: ${CF_ENVIRONMENT}
+        CF_PREVIEW_ACCESS_TOKEN: ${CF_PREVIEW_ACCESS_TOKEN}
+        CF_SPACE_ID: ${CF_SPACE_ID}
+        DATABASE_URL: ${DATABASE_URL}
+        EMAIL_SERVER_URL: ${EMAIL_SERVER_URL}
+        GOOGLE_TAG_MANAGER_CONTAINER_ID: ${GOOGLE_TAG_MANAGER_CONTAINER_ID}
+        MAILCHIMP_AUDIENCE_ID: ${MAILCHIMP_AUDIENCE_ID}
+        NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
+        PATREON_ACCESS_TOKEN: ${PATREON_ACCESS_TOKEN}
+        PATREON_CAMPAIGN_ID: ${PATREON_CAMPAIGN_ID}
     environment:
-      - DATABASE_URL=postgresql://vegan_hacktivists:localpass@db:5432/vegan_hacktivists?schema=public
+      CF_DELIVERY_ACCESS_TOKEN: ${CF_DELIVERY_ACCESS_TOKEN}
+      CF_ENVIRONMENT: ${CF_ENVIRONMENT}
+      CF_PREVIEW_ACCESS_TOKEN: ${CF_PREVIEW_ACCESS_TOKEN}
+      CF_SPACE_ID: ${CF_SPACE_ID}
+      DATABASE_URL: ${DATABASE_URL}
+      EMAIL_SERVER_URL: ${EMAIL_SERVER_URL}
+      GOOGLE_TAG_MANAGER_CONTAINER_ID: ${GOOGLE_TAG_MANAGER_CONTAINER_ID}
+      MAILCHIMP_AUDIENCE_ID: ${MAILCHIMP_AUDIENCE_ID}
+      NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
+      PATREON_ACCESS_TOKEN: ${PATREON_ACCESS_TOKEN}
+      PATREON_CAMPAIGN_ID: ${PATREON_CAMPAIGN_ID}
     ports:
       - 3000:3000
   db:
     image: postgres:14
     restart: always
+    environment:
+      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_DB: ${DATABASE_NAME}
     ports:
       - 5432:5432
-    environment:
-      POSTGRES_USER: vegan_hacktivists
-      POSTGRES_PASSWORD: localpass
-      POSTGRES_DB: vegan_hacktivists
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+volumes:
+  pgdata:
