--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^2.9.6",
     "@mailchimp/mailchimp_marketing": "^3.0.75",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "4.1.0",
@@ -34,11 +35,13 @@
     "form-data": "^4.0.0",
     "fuse.js": "^6.6.2",
     "http-status-codes": "^2.2.0",
+    "joi": "^17.6.0",
     "ky": "^0.31.0",
     "ky-universal": "^0.10.1",
     "mailgun.js": "^7.0.4",
     "next": "12.2.2",
     "next-auth": "^4.10.0",
+    "next-joi": "^2.2.1",
     "next-pwa": "^5.5.4",
     "next-seo": "^5.4.0",
     "nodemailer": "^6.7.7",
