--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@prisma/client": "4.1.0",
     "@react-spring/web": "^9.5.0",
     "@tailwindcss/line-clamp": "^0.4.0",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "contentful": "^9.1.32",
     "crypto-js": "^4.1.1",
@@ -36,8 +37,6 @@
     "fuse.js": "^6.6.2",
     "http-status-codes": "^2.2.0",
     "joi": "^17.6.0",
-    "ky": "^0.31.0",
-    "ky-universal": "^0.10.1",
     "mailgun.js": "^7.0.4",
     "next": "12.2.2",
     "next-auth": "^4.10.0",
