--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@prisma/client": "4.1.0",
     "@react-spring/web": "^9.5.0",
     "@tailwindcss/line-clamp": "^0.4.0",
+    "@tanstack/react-query": "^4.0.10",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "contentful": "^9.1.32",
