--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "fuse.js": "^6.6.2",
     "http-status-codes": "^2.2.0",
     "joi": "^17.6.0",
+    "luxon": "^3.0.1",
     "mailgun.js": "^7.0.4",
     "next": "12.2.2",
     "next-auth": "^4.10.0",
-    "next-joi": "^2.2.1",
     "next-pwa": "^5.5.4",
     "next-seo": "^5.4.0",
     "nodemailer": "^6.7.7",
@@ -72,6 +72,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@types/crypto-js": "^4.1.1",
+    "@types/luxon": "^3.0.0",
     "@types/mailchimp__mailchimp_marketing": "^3.0.5",
     "@types/node": "^18.0.6",
     "@types/react": "18.0.15",
