Add tRPC instead of REST
Validation it's MUCH easier

--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@prisma/client": "4.1.0",
     "@react-spring/web": "^9.5.0",
     "@tailwindcss/line-clamp": "^0.4.0",
-    "@tanstack/react-query": "^4.0.10",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "contentful": "^9.1.32",
@@ -37,7 +36,6 @@
     "form-data": "^4.0.0",
     "fuse.js": "^6.6.2",
     "http-status-codes": "^2.2.0",
-    "joi": "^17.6.0",
     "luxon": "^3.0.1",
     "mailgun.js": "^7.0.4",
     "next": "12.2.2",
@@ -54,6 +52,7 @@
     "react-hook-form": "^7.33.1",
     "react-modal": "^3.15.1",
     "react-qr-code": "^2.0.7",
+    "react-query": "^3",
     "react-select": "^5.4.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.0.6",
@@ -61,7 +60,9 @@
     "react-waypoint": "^10.3.0",
     "sass": "^1.53.0",
     "sharp": "^0.30.7",
+    "superjson": "^1.9.1",
     "tailwindcss": "^3.1.6",
+    "zod": "^3.17.10",
     "zustand": "4.0.0-rc.2"
   },
   "devDependencies": {
@@ -71,6 +72,10 @@
     "@testing-library/dom": "^8.16.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "@trpc/client": "^9.26.2",
+    "@trpc/next": "^9.26.2",
+    "@trpc/react": "^9.26.2",
+    "@trpc/server": "^9.26.2",
     "@types/crypto-js": "^4.1.1",
     "@types/luxon": "^3.0.0",
     "@types/mailchimp__mailchimp_marketing": "^3.0.5",
