--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,18 +19,8 @@ services:
         NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
         PATREON_ACCESS_TOKEN: ${PATREON_ACCESS_TOKEN}
         PATREON_CAMPAIGN_ID: ${PATREON_CAMPAIGN_ID}
-    environment:
-      CF_DELIVERY_ACCESS_TOKEN: ${CF_DELIVERY_ACCESS_TOKEN}
-      CF_ENVIRONMENT: ${CF_ENVIRONMENT}
-      CF_PREVIEW_ACCESS_TOKEN: ${CF_PREVIEW_ACCESS_TOKEN}
-      CF_SPACE_ID: ${CF_SPACE_ID}
-      DATABASE_URL: ${DATABASE_URL}
-      EMAIL_SERVER_URL: ${EMAIL_SERVER_URL}
-      GOOGLE_TAG_MANAGER_CONTAINER_ID: ${GOOGLE_TAG_MANAGER_CONTAINER_ID}
-      MAILCHIMP_AUDIENCE_ID: ${MAILCHIMP_AUDIENCE_ID}
-      NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
-      PATREON_ACCESS_TOKEN: ${PATREON_ACCESS_TOKEN}
-      PATREON_CAMPAIGN_ID: ${PATREON_CAMPAIGN_ID}
+    env_file:
+      - .env
     ports:
       - 3000:3000
   db:
