--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "contentful-typescript-codegen": "contentful-typescript-codegen --output src/types/generated/contentful.d.ts"
   },
   "dependencies": {
+    "@babel/core": "^7.18.10",
     "@contentful/rich-text-plain-text-renderer": "^15.12.1",
     "@contentful/rich-text-react-renderer": "^15.12.1",
+    "@floating-ui/react-dom-interactions": "^0.9.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
@@ -66,6 +68,7 @@
     "sharp": "^0.30.7",
     "superjson": "^1.9.1",
     "tailwindcss": "^3.1.6",
+    "webpack": "^5.74.0",
     "zod": "^3.17.10",
     "zustand": "4.0.0-rc.2"
   },
