--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "@prisma/client": "4.1.0",
     "@react-spring/web": "^9.5.0",
     "@tailwindcss/line-clamp": "^0.4.0",
-    "@trpc/client": "^9.26.2",
-    "@trpc/next": "^9.26.2",
-    "@trpc/react": "^9.26.2",
-    "@trpc/server": "^9.26.2",
+    "@trpc/client": "10.0.0-alpha.41",
+    "@trpc/next": "10.0.0-alpha.41",
+    "@trpc/react": "10.0.0-alpha.41",
+    "@trpc/server": "10.0.0-alpha.41",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "contentful": "^9.1.32",
