--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,13 @@ EMAIL_SERVER_PASSWORD=vh
 EMAIL_SERVER_HOST=127.0.0.1
 EMAIL_SERVER_PORT=25
 EMAIL_FROM=dev@veganhacktivists.org
+EMAIL_TO=
+EMAIL_TO_AVOCADO=
+EMAIL_TO_BANANA=
+EMAIL_TO_CARROT=
+EMAIL_TO_CHEATSHEET=
+EMAIL_TO_SWEET_POTATO=
+EMAIL_TO_WATERMELON=
 
 DATABASE_NAME="vegan_hacktivists"
 DATABASE_USER="vegan_hacktivists"
