Add keywords for Team Strawberry

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,7 @@ EMAIL_TO_AVOCADO=
 EMAIL_TO_BANANA=
 EMAIL_TO_CARROT=
 EMAIL_TO_CHEATSHEET=
+EMAIL_TO_STRAWBERRY=
 EMAIL_TO_SWEET_POTATO=
 EMAIL_TO_WATERMELON=
 
