--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@axe-core/react": "^4.4.3",
     "@contentful/rich-text-types": "^15.12.1",
     "@faker-js/faker": "^7.3.0",
+    "@tailwindcss/typography": "^0.5.4",
     "@testing-library/dom": "^8.16.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
