--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest",
+    "test": "jest --watch",
     "contentful-typescript-codegen": "contentful-typescript-codegen --output src/types/generated/contentful.d.ts"
   },
   "dependencies": {
@@ -56,7 +56,7 @@
     "react-error-boundary": "^3.1.4",
     "react-gtm-module": "^2.0.11",
     "react-highlight-words": "^0.18.0",
-    "react-hook-form": "^7.33.1",
+    "react-hook-form": "^7.34.2",
     "react-modal": "^3.15.1",
     "react-qr-code": "^2.0.7",
     "react-select": "^5.4.0",
@@ -76,10 +76,10 @@
     "@contentful/rich-text-types": "^15.12.1",
     "@faker-js/faker": "^7.3.0",
     "@tailwindcss/typography": "^0.5.4",
-    "@testing-library/dom": "^8.16.0",
-    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@types/crypto-js": "^4.1.1",
+    "@types/jest": "^28.1.7",
     "@types/luxon": "^3.0.0",
     "@types/mailchimp__mailchimp_marketing": "^3.0.5",
     "@types/node": "^18.0.6",
@@ -88,15 +88,16 @@
     "@types/react-highlight-words": "^0.16.4",
     "@types/react-modal": "^3.13.1",
     "@types/react-syntax-highlighter": "^15.5.3",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "autoprefixer": "^10.4.7",
-    "babel-jest": "^28.1.3",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.3.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.8.3",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
@@ -108,31 +109,6 @@
     "prisma": "^4.2.1",
     "ts-node": "^10.9.1",
     "typescript": "4.7.4"
-  },
-  "jest": {
-    "setupFilesAfterEnv": [
-      "<rootDir>/jestSetup.js"
-    ],
-    "testEnvironment": "jsdom",
-    "testPathIgnorePatterns": [
-      "<rootDir>/.next/",
-      "<rootDir>/node_modules/"
-    ],
-    "transform": {
-      "^.+\\.(js|jsx|ts|tsx)$": [
-        "<rootDir>/node_modules/babel-jest",
-        {
-          "presets": [
-            "next/babel"
-          ]
-        }
-      ]
-    },
-    "moduleNameMapper": {
-      "\\.(eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(jpg|jpeg|png|gif)$": "<rootDir>/src/__mocks__/imageMock.js",
-      "\\.(css|scss|sass|less)$": "identity-obj-proxy"
-    }
   },
   "optionalDependencies": {
     "contentful-management": "^10.8.0",
