--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@prisma/client": "4.2.1",
     "@react-spring/web": "^9.5.0",
     "@tailwindcss/line-clamp": "^0.4.0",
+    "@tanstack/react-query": "^4.2.1",
     "@trpc/client": "10.0.0-alpha.47",
     "@trpc/next": "10.0.0-alpha.47",
     "@trpc/react": "10.0.0-alpha.47",
@@ -58,7 +59,6 @@
     "react-hook-form": "^7.33.1",
     "react-modal": "^3.15.1",
     "react-qr-code": "^2.0.7",
-    "react-query": "^3",
     "react-select": "^5.4.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.0.6",
