--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@contentful/rich-text-plain-text-renderer": "^15.12.1",
     "@contentful/rich-text-react-renderer": "^15.12.1",
     "@floating-ui/react-dom-interactions": "^0.9.1",
+    "@formkit/auto-animate": "1.0.0-beta.3",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
