--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@types/crypto-js": "^4.1.1",
+    "@types/jest": "^28.1.8",
     "@types/luxon": "^3.0.0",
     "@types/mailchimp__mailchimp_marketing": "^3.0.5",
     "@types/node": "^18.7.13",
