--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
   "*.{js,jsx,ts,tsx}": ["eslint --fix"],
-  "*.{js,jsx,ts,tsx,md,html,css,json}": "prettier --write"
+  "*.{md,html,css,json}": "prettier --write"
 }
