--- a/.eslintignore
+++ b/.eslintignore
@@ -1,7 +1,10 @@
 tailwind.config.js
 next.config.js
+getContentfulEnvironment.js
+postcss.config.js
 src/types/generated/*
 node_modules
 .next
 jestSetup.js
 .github
+__mocks__
