--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --report-unused-disable-directives warn",
+    "lint": "next lint --dir . --report-unused-disable-directives warn",
     "test": "jest",
     "contentful-typescript-codegen": "contentful-typescript-codegen --output src/types/generated/contentful.d.ts"
   },
