--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "baseUrl": "./src",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.js"],
   "exclude": ["node_modules"]
 }
