Use prettier for YAML files

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,16 +1,17 @@
-.next
-.gitignore
-.next
-.git
-.husky
 .env*
-docker
-*Dockerfile*
-*docker-compose*
-node_modules
+.git
+.github
+.gitignore
+.husky
+.next
+.next
 *-debug.log
 *-error.log
-README.md
-LICENSE
+*docker-compose*
+*Dockerfile*
+docker
 getContentfulEnvironment.js
+LICENSE
+node_modules
 prisma/seed.ts
+README.md
