--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
-  "*.{js,jsx,ts,tsx}": ["eslint --fix"],
+  "*.{js,jsx,ts,tsx}": ["lint --fix"],
   "*.{md,html,css,json,yml,yaml}": "prettier --write"
 }
