--- a/.eslintignore
+++ b/.eslintignore
@@ -1,10 +1,6 @@
-tailwind.config.js
-next.config.js
-getContentfulEnvironment.js
-postcss.config.js
 src/types/generated/*
 node_modules
 .next
-jestSetup.js
 .github
 __mocks__
+/public
