--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,7 +20,7 @@ jobs:
 
     steps:
       - name: Check out Git repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Use Node.js 16
         uses: actions/setup-node@v3
@@ -51,7 +51,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pnpm install
+          pnpm install --no-optional
           pnpm prisma generate
 
       - name: Lint project
@@ -62,6 +62,7 @@ jobs:
         continue-on-error: true
         with:
           branch: ${{ github.ref_name }}-lint
+          base: ${{ github.ref_name }}
           reviewers: ${{ github.actor }}
           delete-branch: true
           title: "Auto fix code style"
