--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -62,7 +62,7 @@ jobs:
         run: pnpm lint --fix
 
       - name: Create Pull Request
-        if: steps.lint.outcome == 'failure'
+        if: ${{ failure() && steps.lint.outcome == 'failure' }}
         uses: peter-evans/create-pull-request@v4
         with:
           branch: ${{ github.ref_name }}-lint
@@ -71,5 +71,5 @@ jobs:
           title: "Auto fix code style"
 
       - name: Fail if lint errors
-        if: steps.lint.outcome == 'failure'
+        if: ${{ failure() && steps.lint.outcome == 'failure' }}
         run: exit 1
