--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,6 +22,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: hmarr/debug-action@v2
+
       - name: Check out Git repository
         uses: actions/checkout@v3
 
