--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -70,7 +70,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: ${{ github.event.pull_request.head.ref }}
-          branch_suffix: autofix/
+          branch-suffix: autofix/
           reviewers: ${{ github.actor }}
           delete-branch: true
           title: "Auto fix code style"
