--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,7 +18,7 @@ jobs:
     if: startsWith(github.head_ref, 'autofix/') == false && github.event.pull_request.head.repo.full_name == github.repository
     # Down scope as necessary via https://docs.github.com/en/actions/security-guides/automatic-token-authentication#modifying-the-permissions-for-the-github_token
     permissions:
-      pull_requests: write
+      pull-requests: write
       checks: write
       contents: write
 
