--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-waypoint": "^10.3.0",
     "sass": "^1.54.5",
     "sharp": "^0.30.7",
+    "snoowrap": "^1.23.0",
     "superjson": "^1.9.1",
     "tailwindcss": "^3.1.8",
     "zod": "^3.18.0",
