--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@types/luxon": "^3.0.0",
     "@types/mailchimp__mailchimp_marketing": "^3.0.5",
     "@types/node": "^18.7.13",
+    "@types/nodemailer": "^6.4.5",
     "@types/react": "18.0.15",
     "@types/react-gtm-module": "^2.0.1",
     "@types/react-highlight-words": "^0.16.4",
