add reddit settings for env.example
the reddit settings are needed to run trpc requests without issue

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,8 @@ DATABASE_URL="postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@localhost:5432/
 
 NEXT_TELEMETRY_DISABLED=1
 NEXTAUTH_SECRET=govegan
+
+REDDIT_USER_AGENT=vh
+REDDIT_CLIENT_SECRET=vh
+REDDIT_PASSWORD=vh
+REDDIT_USERNAME=vh
