--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "http-status-codes": "^2.2.0",
     "luxon": "^3.0.3",
     "mailgun.js": "^7.0.4",
+    "mjml": "^4.13.0",
     "next": "12.2.2",
     "next-auth": "^4.10.3",
     "next-pwa": "^5.6.0",
@@ -85,6 +86,7 @@
     "@types/jest": "^28.1.8",
     "@types/luxon": "^3.0.0",
     "@types/mailchimp__mailchimp_marketing": "^3.0.5",
+    "@types/mjml": "^4.7.0",
     "@types/node": "^18.7.13",
     "@types/nodemailer": "^6.4.5",
     "@types/react": "18.0.15",
