--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "@react-spring/web": "^9.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tanstack/react-query": "^4.2.3",
-    "@trpc/client": "10.0.0-alpha.47",
-    "@trpc/next": "10.0.0-alpha.47",
-    "@trpc/react": "10.0.0-alpha.47",
-    "@trpc/server": "10.0.0-alpha.47",
+    "@trpc/client": "10.0.0-proxy-alpha.72",
+    "@trpc/next": "10.0.0-proxy-alpha.72",
+    "@trpc/react": "10.0.0-proxy-alpha.72",
+    "@trpc/server": "10.0.0-proxy-alpha.72",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "contentful": "^9.1.34",
