--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
     "@contentful/rich-text-react-renderer": "^15.12.1",
     "@floating-ui/react-dom-interactions": "^0.9.3",
     "@formkit/auto-animate": "1.0.0-beta.3",
-    "@fortawesome/fontawesome-svg-core": "^6.1.2",
-    "@fortawesome/free-brands-svg-icons": "^6.1.2",
-    "@fortawesome/free-regular-svg-icons": "^6.1.2",
-    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^2.9.7",
     "@mailchimp/mailchimp_marketing": "^3.0.78",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "4.3.1",
     "@react-spring/web": "^9.5.2",
-    "@tailwindcss/line-clamp": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-query": "^4.2.3",
     "@trpc/client": "10.0.0-proxy-alpha.72",
     "@trpc/next": "10.0.0-proxy-alpha.72",
@@ -45,9 +45,9 @@
     "fuse.js": "^6.6.2",
     "http-status-codes": "^2.2.0",
     "luxon": "^3.0.3",
-    "mailgun.js": "^7.0.4",
+    "mailgun.js": "^8.0.1",
     "mjml": "^4.13.0",
-    "next": "12.2.2",
+    "next": "12.2.5",
     "next-auth": "^4.10.3",
     "next-pwa": "^5.6.0",
     "next-seo": "^5.5.0",
@@ -66,54 +66,54 @@
     "react-toastify": "^9.0.8",
     "react-use-pagination": "^2.0.1",
     "react-waypoint": "^10.3.0",
-    "sass": "^1.54.5",
-    "sharp": "^0.30.7",
+    "sass": "^1.54.8",
+    "sharp": "^0.31.0",
     "snoowrap": "^1.23.0",
     "superjson": "^1.9.1",
     "tailwindcss": "^3.1.8",
-    "zod": "^3.18.0",
-    "zustand": "4.0.0-rc.2"
+    "zod": "^3.19.0",
+    "zustand": "4.1.1"
   },
   "devDependencies": {
     "@axe-core/react": "^4.4.4",
     "@contentful/rich-text-types": "^15.12.1",
     "@faker-js/faker": "^7.5.0",
-    "@tailwindcss/typography": "^0.5.4",
+    "@tailwindcss/typography": "^0.5.7",
     "@testing-library/dom": "^8.17.1",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react": "^13.4.0",
     "@types/crypto-js": "^4.1.1",
-    "@types/jest": "^28.1.8",
-    "@types/luxon": "^3.0.0",
+    "@types/jest": "^29.0.0",
+    "@types/luxon": "^3.0.1",
     "@types/mailchimp__mailchimp_marketing": "^3.0.5",
     "@types/mjml": "^4.7.0",
-    "@types/node": "^18.7.13",
+    "@types/node": "^18.7.15",
     "@types/nodemailer": "^6.4.5",
-    "@types/react": "18.0.15",
+    "@types/react": "18.0.18",
     "@types/react-gtm-module": "^2.0.1",
     "@types/react-highlight-words": "^0.16.4",
     "@types/react-modal": "^3.13.1",
     "@types/react-syntax-highlighter": "^15.5.5",
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/parser": "^5.35.1",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
     "autoprefixer": "^10.4.8",
-    "babel-jest": "^28.1.3",
-    "eslint": "8.20.0",
-    "eslint-config-next": "12.2.2",
+    "babel-jest": "^29.0.2",
+    "eslint": "8.23.0",
+    "eslint-config-next": "12.2.5",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^28.1.3",
-    "jest-environment-jsdom": "^28.1.3",
+    "jest": "^29.0.2",
+    "jest-environment-jsdom": "^29.0.2",
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prisma": "^4.3.1",
     "ts-node": "^10.9.1",
-    "typescript": "4.7.4"
+    "typescript": "4.8.2"
   },
   "jest": {
     "setupFilesAfterEnv": [
@@ -141,7 +141,7 @@
     }
   },
   "optionalDependencies": {
-    "contentful-management": "^10.12.0",
+    "contentful-management": "^10.12.1",
     "contentful-typescript-codegen": "^3.2.3"
   },
   "engines": {
