--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "classnames": "^2.3.1",
     "contentful": "^9.1.34",
     "crypto-js": "^4.1.1",
+    "decimal.js": "^10.4.0",
     "discord.js": "^14.3.0",
     "form-data": "^4.0.0",
     "fuse.js": "^6.6.2",
