--- a/.env.example
+++ b/.env.example
@@ -5,17 +5,17 @@ CF_MANAGING_ACCESS_TOKEN=
 
 CF_ENVIRONMENT=master
 
-MAILGUN_API_KEY=
+MAILGUN_API_KEY=veganhacktivists
 
 MAILCHIMP_API_KEY=
 MAILCHIMP_AUDIENCE_ID=
 MAILCHIMP_SERVER_ID=us20
 
-EMAIL_SERVER_USER=
-EMAIL_SERVER_PASSWORD=
-EMAIL_SERVER_HOST=
-EMAIL_SERVER_PORT=
-EMAIL_FROM=
+EMAIL_SERVER_USER=vh
+EMAIL_SERVER_PASSWORD=vh
+EMAIL_SERVER_HOST=127.0.0.1
+EMAIL_SERVER_PORT=25
+EMAIL_FROM=dev@veganhacktivists.org
 
 DATABASE_NAME="vegan_hacktivists"
 DATABASE_USER="vegan_hacktivists"
