add reddit_client_id to .env.example

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,7 @@ NEXT_TELEMETRY_DISABLED=1
 NEXTAUTH_SECRET=govegan
 
 REDDIT_USER_AGENT=vh
+REDDIT_CLIENT_ID=vh
 REDDIT_CLIENT_SECRET=vh
 REDDIT_PASSWORD=vh
 REDDIT_USERNAME=vh
