Add csv-import and tests

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,8 @@ EMAIL_TO_STRAWBERRY=
 EMAIL_TO_SWEET_POTATO=
 EMAIL_TO_WATERMELON=
 
+DATA_API_KEY=veganhacktivists
+
 DATABASE_NAME="vegan_hacktivists"
 DATABASE_USER="vegan_hacktivists"
 DATABASE_PASSWORD="supersecretpassword"
