--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^2.9.7",
+    "@lottiefiles/react-lottie-player": "^3.4.7",
     "@mailchimp/mailchimp_marketing": "^3.0.78",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@nivo/core": "^0.80.0",
