--- a/package.json
+++ b/package.json
@@ -25,103 +25,103 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@hookform/resolvers": "^2.9.7",
+    "@hookform/resolvers": "^2.9.10",
     "@lottiefiles/react-lottie-player": "^3.4.7",
-    "@mailchimp/mailchimp_marketing": "^3.0.78",
-    "@next-auth/prisma-adapter": "^1.0.4",
+    "@mailchimp/mailchimp_marketing": "^3.0.80",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@nivo/core": "^0.80.0",
     "@nivo/line": "^0.80.0",
-    "@prisma/client": "4.3.1",
-    "@react-spring/web": "^9.5.2",
+    "@prisma/client": "4.5.0",
+    "@react-spring/web": "^9.5.5",
     "@tailwindcss/line-clamp": "^0.4.2",
-    "@tanstack/react-query": "^4.2.3",
+    "@tanstack/react-query": "^4.14.3",
     "@trpc/client": "10.0.0-proxy-alpha.74",
     "@trpc/next": "10.0.0-proxy-alpha.74",
     "@trpc/react": "10.0.0-proxy-alpha.74",
     "@trpc/server": "10.0.0-proxy-alpha.74",
     "axios": "^0.27.2",
-    "classnames": "^2.3.1",
-    "contentful": "^9.1.34",
+    "classnames": "^2.3.2",
+    "contentful": "^9.2.9",
     "crypto-js": "^4.1.1",
-    "decimal.js": "^10.4.0",
+    "decimal.js": "^10.4.2",
     "discord.js": "14.6.0",
     "form-data": "^4.0.0",
     "fuse.js": "^6.6.2",
     "http-status-codes": "^2.2.0",
-    "luxon": "^3.0.3",
-    "mailgun.js": "^8.0.1",
+    "luxon": "^3.1.0",
+    "mailgun.js": "^8.0.2",
     "mjml": "^4.13.0",
     "next": "12.2.5",
-    "next-auth": "^4.10.3",
+    "next-auth": "^4.15.1",
     "next-pwa": "^5.6.0",
-    "next-seo": "^5.5.0",
-    "nodemailer": "^6.7.8",
+    "next-seo": "^5.14.0",
+    "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-gtm-module": "^2.0.11",
     "react-highlight-words": "^0.18.0",
-    "react-hook-form": "^7.34.2",
-    "react-modal": "^3.15.1",
-    "react-qr-code": "^2.0.7",
-    "react-select": "^5.4.0",
+    "react-hook-form": "^7.39.1",
+    "react-modal": "^3.16.1",
+    "react-qr-code": "^2.0.8",
+    "react-select": "^5.6.0",
     "react-syntax-highlighter": "^15.5.0",
-    "react-toastify": "^9.0.8",
+    "react-toastify": "^9.1.1",
     "react-use-pagination": "^2.0.1",
     "react-waypoint": "^10.3.0",
-    "sass": "^1.54.8",
-    "sharp": "^0.31.0",
+    "sass": "^1.56.0",
+    "sharp": "^0.31.2",
     "snoowrap": "^1.23.0",
-    "superjson": "^1.9.1",
-    "tailwindcss": "^3.1.8",
-    "zod": "^3.19.0",
+    "superjson": "^1.11.0",
+    "tailwindcss": "^3.2.2",
+    "zod": "^3.19.1",
     "zustand": "4.1.1"
   },
   "devDependencies": {
-    "@axe-core/react": "^4.4.4",
-    "@contentful/rich-text-types": "^15.12.1",
-    "@faker-js/faker": "^7.5.0",
+    "@axe-core/react": "4.4.4",
+    "@contentful/rich-text-types": "^15.13.2",
+    "@faker-js/faker": "^7.6.0",
     "@tailwindcss/typography": "^0.5.7",
-    "@testing-library/dom": "^8.17.1",
+    "@testing-library/dom": "^8.19.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/crypto-js": "^4.1.1",
-    "@types/jest": "^29.0.0",
-    "@types/luxon": "^3.0.1",
-    "@types/mailchimp__mailchimp_marketing": "^3.0.5",
+    "@types/jest": "^29.2.2",
+    "@types/luxon": "^3.1.0",
+    "@types/mailchimp__mailchimp_marketing": "^3.0.6",
     "@types/mjml": "^4.7.0",
-    "@types/node": "^18.7.15",
-    "@types/nodemailer": "^6.4.5",
+    "@types/node": "^18.11.9",
+    "@types/nodemailer": "^6.4.6",
     "@types/react": "18.0.18",
     "@types/react-gtm-module": "^2.0.1",
     "@types/react-highlight-words": "^0.16.4",
     "@types/react-modal": "^3.13.1",
     "@types/react-syntax-highlighter": "^15.5.5",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
-    "autoprefixer": "^10.4.8",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.5.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.8.3",
+    "eslint-plugin-jest": "^26.9.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.0.2",
-    "jest-environment-jsdom": "^29.0.2",
+    "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.2.2",
     "lint-staged": "^13.0.3",
-    "postcss": "^8.4.16",
+    "postcss": "^8.4.18",
     "prettier": "^2.7.1",
-    "prisma": "^4.3.1",
+    "prisma": "^4.5.0",
     "ts-node": "^10.9.1",
     "typescript": "4.8.2"
   },
   "optionalDependencies": {
-    "contentful-management": "^10.12.1",
+    "contentful-management": "^10.19.1",
     "contentful-typescript-codegen": "^3.2.3"
   },
   "engines": {
