--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-gtm-module": "^2.0.11",
     "react-highlight-words": "^0.18.0",
     "react-hook-form": "^7.39.1",
+    "react-intl": "^6.2.1",
     "react-modal": "^3.16.1",
     "react-qr-code": "^2.0.8",
     "react-select": "^5.6.0",
