--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "next start",
     "lint": "next lint --dir . --report-unused-disable-directives warn",
     "test": "jest --watch",
+    "format": "prettier -w .",
     "contentful-typescript-codegen": "contentful-typescript-codegen --output src/types/generated/contentful.d.ts",
     "translation:extract": "ts-node translation/extract.ts && pnpm translation:compile",
     "translation:update": "ts-node translation/update.ts",
