--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,6 @@ REDDIT_USERNAME=vh
 
 TRANSLATION_REPO_DEEPL_API_URL=https://api-free.deepl.com/v2/translate
 TRANSLATION_REPO_DEEPL_API_TOKEN=
+
+PATREON_CAMPAIGN_ID=
+PATREON_ACCESS_TOKEN=
