Add api route for scheduled tasks

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@trpc/react": "10.0.0-proxy-alpha.74",
     "@trpc/server": "10.0.0-proxy-alpha.74",
     "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
     "classnames": "^2.3.2",
     "contentful": "^9.2.11",
     "crypto-js": "^4.1.1",
@@ -86,6 +87,7 @@
     "@testing-library/dom": "^8.19.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/crypto-js": "^4.1.1",
     "@types/jest": "^29.2.3",
     "@types/luxon": "^3.1.0",
