--- a/package.json
+++ b/package.json
@@ -71,7 +71,6 @@
     "react-toastify": "^9.1.1",
     "react-use-pagination": "^2.0.1",
     "react-waypoint": "^10.3.0",
-    "rooks": "^7.14.1",
     "sass": "^1.56.1",
     "sharp": "^0.31.2",
     "snoowrap": "^1.23.0",
@@ -120,6 +119,7 @@
     "postcss": "^8.4.19",
     "prettier": "^2.7.1",
     "prisma": "^4.6.1",
+    "tailwind-scrollbar": "^3.0.4",
     "ts-node": "^10.9.1",
     "typescript": "4.8.2"
   },
