--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -1,6 +1,6 @@
-ARG NODE_VERSION=16.16.0
+ARG IMAGE=node:20.9.0-alpine3.18
 
-FROM node:${NODE_VERSION}-alpine AS base
+FROM ${IMAGE} AS base
 WORKDIR /app
 ENV NEXT_TELEMETRY_DISABLED=1
 ARG PNPM_VERSION=8.6.0
