Upgrade prisma client

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@nivo/core": "^0.80.0",
     "@nivo/line": "^0.80.0",
-    "@prisma/client": "4.16.2",
+    "@prisma/client": "5.6.0",
     "@react-spring/web": "^9.5.5",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-query": "^4.16.1",
@@ -129,7 +129,6 @@
     "contentful-typescript-codegen": "^3.2.3"
   },
   "engines": {
-    "pnpm": ">=8.0.0",
-    "node": ">=20.9.0"
+    "pnpm": ">=8.0.0"
   }
 }
