--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "superjson": "^1.11.0",
     "tailwindcss": "^3.2.4",
     "zod": "^3.19.1",
+    "zod-prisma-types": "^3.1.6",
     "zustand": "4.1.1"
   },
   "devDependencies": {
