Allow custom email and db port

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,7 @@ DATABASE_NAME="vegan_hacktivists"
 DATABASE_USER="vegan_hacktivists"
 DATABASE_PASSWORD="supersecretpassword"
 DATABASE_URL="postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@localhost:5432/${DATABASE_NAME}?schema=public"
+DATABASE_PORT="5432"
 
 NEXT_TELEMETRY_DISABLED=1
 NEXTAUTH_SECRET=govegan
