Pin older zod version
Newer versions of zod cause the generator to emit code with
type errors , as per zod-prisma-types issue #222

--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "pnpm": {
+    "overrides": {
+      "zod": "3.21.1"
+    }
+  },
   "name": "vh-site",
   "version": "0.1.0",
   "private": true,
