Fully parameterize DATABASE_URL

--- a/.env.example
+++ b/.env.example
@@ -29,8 +29,9 @@ EMAIL_TO_WATERMELON=
 DATABASE_NAME="vegan_hacktivists"
 DATABASE_USER="vegan_hacktivists"
 DATABASE_PASSWORD="supersecretpassword"
-DATABASE_URL="postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@localhost:5432/${DATABASE_NAME}?schema=public"
 DATABASE_PORT="5432"
+DATABASE_HOST="localhost"
+DATABASE_URL="postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?schema=public"
 
 NEXT_TELEMETRY_DISABLED=1
 NEXTAUTH_SECRET=govegan
