--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,4 +5,4 @@ cmds = [
 ]
 
 [start]
-cmd = "pnpm prisma migrate deploy && pnpm run start"
+cmd = "corepack enable && pnpm prisma migrate deploy && pnpm run start"
