Add self hosted analytics

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -30,8 +30,8 @@ ARG CF_PREVIEW_ACCESS_TOKEN
 ARG CF_ENVIRONMENT
 ARG PATREON_ACCESS_TOKEN
 ARG PATREON_CAMPAIGN_ID
-ARG GOOGLE_TAG_MANAGER_CONTAINER_ID
-ENV NEXT_PUBLIC_GOOGLE_TAG_MANAGER_CONTAINER_ID=${GOOGLE_TAG_MANAGER_CONTAINER_ID}
+ARG ANALYTICS_WEBSITE_ID
+ENV ANALYTICS_WEBSITE_ID=${ANALYTICS_WEBSITE_ID}
 
 RUN pnpm run build
 
